--- a/css/style.scss
+++ b/css/style.scss
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: 'CoffeFont';
-    src: url(PicturamaAlternate_PERSONAL_USE_ONLY.otf) format('opentype');
+    src: url(../img/PicturamaAlternate_PERSONAL_USE_ONLY.otf) format('opentype');
 }
 
 
